Fix position for ability-wrapper on Firefox
cache-bust css

--- a/calc.css
+++ b/calc.css
@@ -220,7 +220,8 @@ body:not(.show-focus-outlines) [tabindex]:focus {
 }
 
 .ability-wrapper {
-  margin-top: -10px;
+  position:relative;
+  top: -10px;
   display:flex;
   justify-content: space-around;
   padding-left: 10px;
